--- a/public/index.html
+++ b/public/index.html
@@ -571,77 +571,47 @@
       <p>AI/ML: YOLOv8, CNN, PyTorch, OpenCV</p>
     </div>
 
-   <section id="Projects" class="menu-options">
-  <h1>Projects</h1>
+  
 
-  <article class="project-card">
-    <h2>Autonomous Vehicle Object Detection</h2>
-    <p>
-      Real-Time Object Detection for Autonomous Vehicles 
-      (<strong>YOLOv8 & YOLOv11</strong>) — <em>90% Complete</em>. <br>
-      Designed and trained real-time detection models using YOLOv8 and conceptual YOLOv11 
-      for autonomous traffic systems. Achieved <strong>mAP@0.5 = 0.558</strong>, 
-      real-time inference speed at <strong>~7.8ms/image</strong>, and robust detection 
-      across 5+ classes. Integrated CNN-transformer hybrid models and deployed 
-      on low-resource edge systems.
-    </p>
-    <a href="https://github.com/kurrashivaramakrishna/object-detection-using-YOLO/blob/main/Autonoumous-Vehicle-ObjectDectection-code.ipynb" 
-       class="project-link" 
-       target="_blank" 
-       rel="noopener noreferrer">
-       🔗 View Source Code
-    </a>
-  </article>
+  <section id="projects" class="menu-options">
+    <h2>Projects</h2>
 
-  <article class="project-card">
-    <h2>Java Inventory Management System</h2>
-    <p>
-      Java Inventory Management System — <em>100% Complete</em>. <br>
-      Built a complete inventory management tool in Java using Swing GUI following OOP
-      principles. Applied <strong>Observer Pattern</strong> for low-stock alerting and 
-      <strong>Adapter Pattern</strong> to integrate incompatible stock sources (ASC/MSM). 
-      Utilized Java I/O and CSV parsing for persistent data and user-friendly console-based operations.
-    </p>
-    <a href="https://github.com/kurrashivaramakrishna/Java-Stock-Control-System-OOP-with-GUI-Design-Patterns" 
-       class="project-link" 
-       target="_blank" 
-       rel="noopener noreferrer">
-       🔗 View Source Code
-    </a>
-  </article>
+    <article class="project-card">
+      <h3>Autonomous Vehicle Object Detection</h3>
+      <p><strong>Objective:</strong> Real-time traffic object detection for autonomous vehicles.</p>
+      <p><strong>Role:</strong> Designed & trained YOLOv8 model; integrated CNN-transformer hybrid for edge deployment.</p>
+      <p><strong>Technologies Used:</strong> YOLOv8, PyTorch, Python, OpenCV</p>
+      <p><strong>Outcome:</strong> Achieved mAP@0.5 = 0.558; inference ~7.8ms/image; robust detection across 5+ classes.</p>
+      <a href="https://colab.research.google.com/drive/1WhzMXk_UnbMhFH10l6lyLO2h2PXyXSJp" target="_blank" rel="noopener noreferrer" class="project-link">🔗 View Source Code</a>
+    </article>
 
-  <article class="project-card">
-    <h2>AI Snake Game with Reinforcement Learning</h2>
-    <p>
-      AI Snake Game with Reinforcement Learning — <em>85% Complete</em>. <br>
-      Engineered an autonomous Snake game agent using Python, PyGame, and Q-Learning 
-      algorithms. Developed environment-state modeling and reward strategy using 
-      Deep Q Networks for optimal performance.
-    </p>
-    <a href="https://github.com/kurrashivaramakrishna/AI-Snake-Game" 
-       class="project-link" 
-       target="_blank" 
-       rel="noopener noreferrer">
-       🔗 View Source Code
-    </a>
-  </article>
+    <article class="project-card">
+      <h3>Java Inventory Management System</h3>
+      <p><strong>Objective:</strong> Desktop inventory management tool for small businesses.</p>
+      <p><strong>Role:</strong> Built GUI in Java Swing, implemented Observer and Adapter patterns, CSV-based persistence.</p>
+      <p><strong>Technologies Used:</strong> Java, Swing, CSV</p>
+      <p><strong>Outcome:</strong> Fully functional, user-friendly inventory app with low-stock alerts and multi-source integration.</p>
+      <a href="https://github.com/kurrashivaramakrishna/Java-Stock-Control-System-OOP-with-GUI-Design-Patterns" target="_blank" rel="noopener noreferrer" class="project-link">🔗 View Source Code</a>
+    </article>
 
-  <article class="project-card">
-    <h2>Career Quiz Android App</h2>
-    <p>
-      Career Quiz Android App — <em>90% Complete</em>. <br>
-      Developed using Kotlin, integrated Firebase Authentication, speech recognition, and 
-      text-to-speech. Followed MVVM architecture, designed responsive layouts, and implemented 
-      multi-level career quiz features.
-    </p>
-    <a href="https://quickresumeaipowered.netlify.app/" 
-       class="project-link" 
-       target="_blank" 
-       rel="noopener noreferrer">
-       Demo App
-    </a>
-  </article>
-</section>
+    <article class="project-card">
+      <h3>AI Snake Game with Reinforcement Learning</h3>
+      <p><strong>Objective:</strong> Develop an autonomous Snake game agent using AI.</p>
+      <p><strong>Role:</strong> Engineered environment-state modeling and reward strategy using Deep Q Networks.</p>
+      <p><strong>Technologies Used:</strong> Python, PyGame, PyTorch</p>
+      <p><strong>Outcome:</strong> Autonomous gameplay with optimized performance and reinforcement learning integration.</p>
+      <a href="https://github.com/kurrashivaramakrishna/AI-Snake-Game" target="_blank" rel="noopener noreferrer" class="project-link">🔗 View Source Code</a>
+    </article>
+
+    <article class="project-card">
+      <h3>Career Quiz Android App</h3>
+      <p><strong>Objective:</strong> Mobile app to guide career choices through quizzes.</p>
+      <p><strong>Role:</strong> Developed multi-level quiz, integrated Firebase Authentication, speech-to-text, text-to-speech, and followed MVVM architecture.</p>
+      <p><strong>Technologies Used:</strong> Kotlin, Android, Firebase</p>
+      <p><strong>Outcome:</strong> Fully functional interactive Android app deployed to users.</p>
+      <a href="https://quickresumeaipowered.netlify.app/" target="_blank" rel="noopener noreferrer" class="project-link">🔗 Demo App</a>
+    </article>
+  </section>
 
 <section id="education" class="menu-options">
   <h2>Education</h2>
@@ -763,7 +733,7 @@
                 <div class="social-links">
                     <a href="mailto:shivakrish2724262@gmail.com" class="social-link" title="Email me">
                         <i class="fas fa-envelope"></i>
-                        <span>Email me</span>
+                        <span>Email</span>
                     </a>
                     <a href="https://www.linkedin.com/in/shiva-rama-krishna-861a3916b"  class="social-link">
                         <i class="fab fa-linkedin-in"></i>
@@ -779,9 +749,7 @@
         </section>
  
     <footer>
-      Full Stack Developer, React.js, Node.js, Python, Flask, YOLOv8, CNN, Java,
-      Kotlin, Android, Firebase, SQL, REST API, AI Engineer, Deep Learning, Tier
-      2 Sponsorship, Graduate Visa, Software Engineer UK
+       © 2025 Shiva Rama Krishna | Full Stack Developer
     </footer>
     <script src="/script.js"></script>
      <script src="https://usaaehixgdgaqbwwcjeo.supabase.co/storage/v1/object/public/my-website/public/js/script.js"></script>
