--- a/public/pages/Contact.html
+++ b/public/pages/Contact.html
@@ -154,7 +154,7 @@
               title="Email me"
             >
               <i class="fas fa-envelope"></i>
-              <span>Email me</span>
+              <span>Email</span>
             </a>
             <a
               href="https://www.linkedin.com/in/shiva-rama-krishna-861a3916b"
