--- a/public/pages/certifications.html
+++ b/public/pages/certifications.html
@@ -57,7 +57,7 @@
 
         <span
           class="upload-btn"
-          onclick="window.location.href='/public';"
+          onclick="window.location.href='/pages/signin';"
         >
           <i class="fas fa-plus"></i>
         </span>
