--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
     <div class="content-wrapper" id="Content-wrapper">
       <a href="/images/Shiva_Rama_Krishna-Software_Engineer.pdf" id="download-button" download>
-        <button class="btn"><i class="fa fa-download"></i> Download</button>
+        <button class="btn"><i class="fa fa-download"></i> Resume</button>
       </a>
       <div id="dropdown-menu">
         <button class="menu-button" onclick="toggleMenu(this)">☰</button>
