--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
         <button class="menu-button" onclick="toggleMenu(this)">☰</button>
         <div id="menu-content" class="menu-content">
           <a href="/index.html" class="menu-Elements">Home</a>
+          <a href="/pages/skill" class="menu-Elements" onclick="loadPage('/pages/skill.html')">Skills</a>
           <a href="/pages/Skills" class="menu-Elements">Skills</a>
           <a href="/pages/projects" class="menu-Elements">Projects</a>
           <a href="/pages/experience" class="menu-Elements" >Experience</a>
